syntax = "proto3";



option java_multiple_files = true;
option java_package = 'evil.inc.proto.domain';

message Credentials {
  oneof authentication {
    BasicAuth basicAuth = 1;
    Token token = 2;
  }
}

message Token {
  string accessToken = 1;
}

message BasicAuth {
  string username = 1;
  string password = 2;
}
