syntax = "proto3";

package example;

option java_multiple_files = true;
option java_package = 'evil.inc.proto.examples';

/**
  Holder object for primitives
*/
message PrimitiveHolder {
  int32 intValue = 1;
  int64 longValue = 2;
  float floatValue = 3;
  double doubleValue = 4;
  bool booleanValue = 5;
  string stringValue = 6;
  bytes byteArrayValue = 7;
}
